--- a/public/share-projects.html
+++ b/public/share-projects.html
@@ -9,10 +9,10 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: url("bg.png");
-  background-size: cover; /* يجعل الصورة تغطي الشاشة بالكامل */
-  background-position: center;
-  background-attachment: fixed; /* يبقي الخلفية ثابتة عند التمرير*/
+      background: url("images/bg.png");
+      background-size: cover; /* يجعل الصورة تغطي الشاشة بالكامل */
+      background-position: center;
+      background-attachment: fixed; /* يبقي الخلفية ثابتة عند التمرير*/
       color: #fff;
       padding: 40px;
     }
