--- a/public/share-projects.html
+++ b/public/share-projects.html
@@ -49,6 +49,12 @@
       display: flex;
       gap: 10px;
     }
+    * {
+      background: url("images/bg.png");
+      background-size: cover; /* يجعل الصورة تغطي الشاشة بالكامل */
+      background-position: center;
+      background-attachment: fixed; /* يبقي الخلفية ثابتة عند التمرير*/
+    }
   </style>
 </head>
 <body>
