--- a/public/share-projects.html
+++ b/public/share-projects.html
@@ -6,16 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: url("images/bg.png");
-      background-size: cover; /* يجعل الصورة تغطي الشاشة بالكامل */
-      background-position: center;
-      background-attachment: fixed; /* يبقي الخلفية ثابتة عند التمرير*/
-      padding: 40px;
-    }
-
+    body{
+  margin: 0;
+  min-height: 100vh;
+  background: url("./bg.png") no-repeat center center fixed;
+  background-size: cover;
+  font-family: 'Poppins', sans-serif;
+  color: #fff; /* 🔥 مهم */
+}
     h1 {
       letter-spacing: 4px;
     }
@@ -48,12 +46,6 @@
     .actions {
       display: flex;
       gap: 10px;
-    }
-    * {
-      background: url("images/bg.png");
-      background-size: cover; /* يجعل الصورة تغطي الشاشة بالكامل */
-      background-position: center;
-      background-attachment: fixed; /* يبقي الخلفية ثابتة عند التمرير*/
     }
   </style>
 </head>
