--- a/public/index.html
+++ b/public/index.html
@@ -23,15 +23,12 @@
 }
 
 body{
-  background: url("bg.png");
+  background: url("https://i.ibb.co/rKy3NFNj/bg.png");
   background-size: cover; /* يجعل الصورة تغطي الشاشة بالكامل */
   background-position: center;
   background-attachment: fixed; /* يبقي الخلفية ثابتة عند التمرير */
   color: var(--text);
   overflow-x: hidden;
-}
-  color:var(--text);
-  overflow-x:hidden;
 }
 
 a{
