--- a/public/projects.html
+++ b/public/projects.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: url("images/bg.png");
+      background: url("https://i.ibb.co/rKy3NFNj/bg.png");
       background-size: cover; /* يجعل الصورة تغطي الشاشة بالكامل */
       background-position: center;
       background-attachment: fixed; /* يبقي الخلفية ثابتة عند التمرير*/
