--- a/public/share-projects.html
+++ b/public/share-projects.html
@@ -9,7 +9,7 @@
     body{
   margin: 0;
   min-height: 100vh;
-  background: url("./bg.png") no-repeat center center fixed;
+  background: url("https://i.ibb.co/rKy3NFNj/bg.png") no-repeat center center fixed;
   background-size: cover;
   font-family: 'Poppins', sans-serif;
   color: #fff; /* 🔥 مهم */
