--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -24,7 +24,7 @@
 }
 
 body{
-  background: url("bg.png");
+  background: url("https://i.ibb.co/rKy3NFNj/bg.png");
   background-size: cover; /* يجعل الصورة تغطي الشاشة بالكامل */
   background-position: center;
   background-attachment: fixed; /* يبقي الخلفية ثابتة عند التمرير
