--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -155,12 +155,12 @@ footer{
       <p>Web Developer & Security Researcher</p>
     </div>
     <div class="team-member">
-      <img src="slowdeath.png" alt="Member 2">
+      <img src="https://i.ibb.co/Y7McH5G3/slowdeath.webp" alt="Member 2">
       <h3>SlowDeath</h3>
       <p>JavaScript Specialist</p>
     </div>
     <div class="team-member">
-      <img src="wanted.png" alt="Member 3">
+      <img src="https://i.ibb.co/NfhZyjf/wanted.webp" alt="Member 3">
       <h3>Wanted</h3>
       <p>Python Developer</p>
     </div>
