--- a/public/projects.html
+++ b/public/projects.html
@@ -14,6 +14,15 @@
       background-position: center;
       background-attachment: fixed; /* يبقي الخلفية ثابتة عند التمرير*/
     }
+    
+    body::before {
+  content: "";
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: rgba(0,0,0,0.5); /* شفافية خفيفة */
+  z-index: -1;
+}
 
     header {
       padding: 40px;
