--- a/public/projects.html
+++ b/public/projects.html
@@ -20,7 +20,7 @@
   position: fixed;
   top: 0; left: 0;
   width: 100%; height: 100%;
-  background: rgba(0,0,0,0.5); /* شفافية خفيفة */
+  background: rgba(0,0,0,0.1); /* شفافية خفيفة */
   z-index: -1;
 }
 
@@ -32,7 +32,12 @@
 
     h1 {
       margin: 0;
+      color: green;
       letter-spacing: 4px;
+    }
+    
+    p {
+      color: red;
     }
 
     .projects {
