--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -25,9 +25,9 @@
 
 body{
   background: url("https://i.ibb.co/rKy3NFNj/bg.png");
-  background-size: cover; /* يجعل الصورة تغطي الشاشة بالكامل */
+  background-size: cover;
   background-position: center;
-  background-attachment: fixed; /* يبقي الخلفية ثابتة عند التمرير
+  background-attachment: fixed
   color:var(--text);
   overflow-x:hidden;
 }
@@ -37,7 +37,7 @@ a{color:inherit;text-decoration:none;}
 /* ===== NAVBAR ===== */
 header{
   position:fixed; top:0; width:100%;
-  background:rgba(0,0,0,0.8);
+  background:rgba(0,0,0,0.9);
   backdrop-filter:blur(10px);
   z-index:1000;
 }
@@ -50,8 +50,8 @@ header{
 
 .logo{font-weight:700; font-size:1.5rem;}
 .menu{display:flex; gap:25px;}
-.menu a{color:var(--muted); transition:.3s;}
-.menu a:hover{color:var(--accent);}
+.menu a{color:red; transition:.3s;}
+.menu a:hover{color: red;}
 .burger{display:none; font-size:1.6rem; cursor:pointer;}
 
 /* ===== HERO ===== */
