--- a/public/share-projects.html
+++ b/public/share-projects.html
@@ -25,6 +25,8 @@
       background: #111;
       border: 1px solid #333;
       color: #fff;
+      border-radius: 100px;
+      background-color: black;
     }
 
     button {
