--- a/public/index.html
+++ b/public/index.html
@@ -241,11 +241,11 @@ footer{
     <div class="logo">SlowDeath</div>
     <div class="burger" onclick="toggleMenu()">☰</div>
     <nav class="menu" id="menu">
-      <a href="#">Home</a>
+      <a href="index.html">Home</a>
       <a href="aboutus.html">About</a>
-      <a href="#">Services</a>
-      <a href="#">Projects</a>
-      <a href="#">Contact</a>
+      <a href="services.html">Services</a>
+      <a href="projects.html">Projects</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </div>
 </header>
