--- a/public/index.html
+++ b/public/index.html
@@ -170,7 +170,9 @@ section{
   color: black;
   background-color: white;
 }
-
+.logo:hover{
+  color: black;
+}
 .card h3{
   margin-bottom:10px;
 }
