--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -1,190 +1,384 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Dashboard - BelvoHost Advanced</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>BelvoHost - Home</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <style>
+    :root {
+      --primary: #4f46e5;
+      --primary-light: #6366f1;
+      --accent: #facc15;
+      --dark-bg: rgba(10, 10, 20, 0.92);
+      --card-bg: rgba(20, 20, 40, 0.7);
+      --text-light: #f0f0ff;
+      --text-gray: #ccc;
+    }
 
-<!-- Font Awesome -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
 
-<style>
-/* ===== GLOBAL ===== */
-body, html {
-  margin:0;
-  height:100%;
-  overflow:hidden;
-  font-family: 'Arial', sans-serif;
-  background: url('/images/file_00000000cc34720aa65b11d4686cb3fc.png') no-repeat center center fixed;
-  background-size: cover;
-  color: white;
-}
+    body, html {
+      font-family: 'Segoe UI', system-ui, sans-serif;
+      min-height: 100%;
+      color: var(--text-light);
+      background: url('/images/file_00000000cc34720aa65b11d4686cb3fc.png') no-repeat center center fixed;
+      background-size: cover;
+      scroll-behavior: smooth;
+    }
 
-/* 3D Canvas */
-#canvas3d {
-  position: fixed;
-  top:0; left:0;
-  width:100%; height:100%;
-  z-index:0;
-}
+    /* Header */
+    header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background: var(--dark-bg);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 16px 30px;
+      z-index: 1000;
+      border-bottom: 1px solid rgba(79, 70, 229, 0.3);
+      transition: all 0.4s ease;
+    }
+    header h1 {
+      font-size: 24px;
+      color: var(--accent);
+      font-weight: 800;
+      letter-spacing: 1px;
+    }
 
-/* ===== HEADER ===== */
-header {
-  position: fixed;
-  top:0;
-  left:0;
-  width:100%;
-  background: rgba(0,0,0,0.8);
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  padding:15px 30px;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.5);
-  z-index: 10;
-  animation: fadeIn 1s ease forwards;
-  opacity:0;
-}
+    header nav {
+      display: flex;
+      gap: 24px;
+      align-items: center;
+    }
 
-header h3 { margin:0; font-size:18px; }
-header span { font-weight:bold; color:#facc15; }
+    header nav a,
+    header .coins-btn {
+      text-decoration: none;
+      color: var(--text-light);
+      font-weight: 600;
+      font-size: 16px;
+      transition: all 0.3s ease;
+      padding: 8px 12px;
+      border-radius: 8px;
+    }
 
-/* ===== MAIN CONTENT ===== */
-#main-content {
-  position:absolute;
-  top:80px;
-  left:50%;
-  transform: translateX(-50%);
-  width:90%;
-  max-width:1000px;
-  display:grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap:20px;
-  z-index:5;
-  animation: fadeIn 2s ease forwards;
-  opacity:0;
-}
+    header nav a:hover,
+    header .coins-btn:hover {
+      color: var(--primary-light);
+      transform: translateY(-2px);
+    }
 
-/* ===== PANELS ===== */
-.panel {
-  background: rgba(0,0,0,0.7);
-  border-radius:15px;
-  padding:20px;
-  box-shadow: 0 0 15px rgba(255,255,255,0.1);
-  transition: transform 0.3s, box-shadow 0.3s;
-}
-.panel:hover {
-  transform: scale(1.03);
-  box-shadow: 0 0 25px rgba(255,255,255,0.3);
-}
+    .coins-btn {
+      background: linear-gradient(135deg, var(--primary), var(--primary-light));
+      color: white;
+      display: flex;
+      align-items: center;
+      gap: 6px;
+      box-shadow: 0 4px 12px rgba(79, 70, 229, 0.4);
+    }
 
-.panel h4 {
-  margin:0 0 10px 0;
-  font-size:16px;
-  color:#4f46e5;
-}
+    /* Mobile Menu Toggle */
+    .menu-toggle {
+      display: none;
+      flex-direction: column;
+      cursor: pointer;
+      width: 30px;
+      height: 22px;
+      justify-content: space-between;
+    }
+    .menu-toggle span {
+      height: 3px;
+      width: 100%;
+      background: var(--text-light);
+      border-radius: 2px;
+      transition: 0.3s;
+    }
 
-/* ===== COINS COUNTER ===== */
-#coins {
-  font-weight:bold;
-  color:#facc15;
-  font-size:18px;
-}
+    /* Hero */
+    #hero {
+      margin-top: 100px;
+      padding: 100px 20px;
+      text-align: center;
+      max-width: 900px;
+      margin-left: auto;
+      margin-right: auto;
+    }
 
-/* ===== ANIMATIONS ===== */
-@keyframes fadeIn {
-  0% {opacity:0; transform: translateY(-20px);}
-  100% {opacity:1; transform: translateY(0);}
-}
-</style>
+    #hero h2 {
+      font-size: 3.2rem;
+      color: var(--accent);
+      margin-bottom: 20px;
+      text-shadow: 0 0 15px rgba(250, 204, 21, 0.5);
+    }
+
+    #hero p {
+      font-size: 1.2rem;
+      color: var(--text-gray);
+      margin-bottom: 30px;
+      line-height: 1.6;
+    }
+
+    #hero button {
+      padding: 14px 32px;
+      background: linear-gradient(135deg, var(--primary), var(--primary-light));
+      color: white;
+      border: none;
+      border-radius: 50px;
+      font-size: 1.1rem;
+      font-weight: bold;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      box-shadow: 0 6px 20px rgba(79, 70, 229, 0.5);
+    }
+
+    #hero button:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 10px 25px rgba(79, 70, 229, 0.7);
+    }
+    /* Sections */
+    section {
+      padding: 70px 20px;
+      text-align: center;
+      max-width: 1000px;
+      margin: 0 auto;
+    }
+
+    section h3 {
+      font-size: 2.2rem;
+      color: var(--accent);
+      margin-bottom: 25px;
+      position: relative;
+    }
+
+    section h3::after {
+      content: '';
+      display: block;
+      width: 60px;
+      height: 4px;
+      background: var(--primary);
+      margin: 10px auto 0;
+      border-radius: 2px;
+    }
+
+    section p {
+      line-height: 1.7;
+      color: var(--text-gray);
+      font-size: 1.05rem;
+    }
+
+    /* Plans Grid */
+    #plans-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 28px;
+      margin-top: 30px;
+    }
+
+    .plan {
+      background: var(--card-bg);
+      padding: 30px;
+      border-radius: 20px;
+      transition: all 0.4s ease;
+      border: 1px solid rgba(79, 70, 229, 0.2);
+      backdrop-filter: blur(5px);
+    }
+
+    .plan:hover {
+      transform: translateY(-10px);      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.4);
+      border-color: var(--primary-light);
+    }
+
+    .plan h4 {
+      color: var(--primary-light);
+      font-size: 1.4rem;
+      margin-bottom: 15px;
+    }
+
+    .plan p {
+      margin-bottom: 20px;
+    }
+
+    .plan button {
+      padding: 12px 24px;
+      background: var(--primary);
+      color: white;
+      border: none;
+      border-radius: 10px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      width: 100%;
+    }
+
+    .plan button:hover {
+      background: var(--primary-light);
+      transform: scale(1.03);
+    }
+
+    /* Contact */
+    #contact {
+      background: rgba(0, 0, 0, 0.3);
+      border-radius: 20px;
+      padding: 40px !important;
+    }
+
+    #contact p {
+      font-size: 1.1rem;
+      color: var(--accent);
+      margin-top: 10px;
+    }
+
+    /* Animations */
+    .fadeIn {
+      opacity: 0;
+      transform: translateY(30px);
+      animation: fadeInUp 1s forwards;
+    }
+    @keyframes fadeInUp {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      header {
+        flex-wrap: wrap;
+        padding: 16px 20px;
+      }
+
+      header nav {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        gap: 12px;
+        margin-top: 15px;
+      }
+
+      header nav.active {
+        display: flex;
+      }
+
+      .menu-toggle {
+        display: flex;
+      }
+
+      .menu-toggle.active span:nth-child(1) {
+        transform: rotate(45deg) translate(6px, 6px);
+      }
+      .menu-toggle.active span:nth-child(2) {
+        opacity: 0;
+      }
+      .menu-toggle.active span:nth-child(3) {
+        transform: rotate(-45deg) translate(6px, -6px);
+      }
+
+      #hero h2 {
+        font-size: 2.4rem;
+      }
+
+      #hero {
+        margin-top: 90px;
+        padding: 70px 15px;
+      }
+    }
+    @media (max-width: 480px) {
+      #hero h2 {
+        font-size: 2rem;
+      }
+      section h3 {
+        font-size: 1.8rem;
+      }
+    }
+  </style>
 </head>
 <body>
 
-<!-- 3D Canvas -->
-<canvas id="canvas3d"></canvas>
-
-<header>
-  <h3>Welcome, <span id="username">User</span></h3>
-  <div>Coins: <span id="coins">0</span> <i class="fa-solid fa-coins"></i></div>
+<!-- Header -->
+<header class="fadeIn">
+  <h1>BelvoHost</h1>
+  <div class="menu-toggle" id="menuToggle">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+  <nav id="mainNav">
+    <a href="#hero">Home</a>
+    <a href="#plans">Plans</a>
+    <a href="#about">About Us</a>
+    <a href="#contact">Contact</a>
+    <a href="/coins" class="coins-btn"><i class="fas fa-coins"></i> My Coins</a>
+  </nav>
 </header>
 
-<div id="main-content">
-  <div class="panel">
-    <h4>Your Servers</h4>
-    <p>No servers yet. Create one now!</p>
+<!-- Hero Section -->
+<section id="hero" class="fadeIn">
+  <h2>Welcome to BelvoHost</h2>
+  <p>Your premium hosting solution for Minecraft, SAMP, Discord Bots, and more!</p>
+  <button onclick="document.getElementById('plans').scrollIntoView({behavior:'smooth'})">Explore Plans</button>
+</section>
+
+<!-- Plans Section -->
+<section id="plans" class="fadeIn">
+  <h3>Our Hosting Plans</h3>
+  <div id="plans-grid">
+    <div class="plan">
+      <h4><i class="fas fa-cube"></i> Minecraft Hosting</h4>
+      <p>Reliable and fast servers for Minecraft players with DDoS protection & instant setup.</p>
+      <button>Request Host</button>
+    </div>
+    <div class="plan">
+      <h4><i class="fas fa-gamepad"></i> SAMP Hosting</h4>
+      <p>Optimized servers for SAMP multiplayer with custom plugins & low latency.</p>
+      <button>Request Host</button>    </div>
+    <div class="plan">
+      <h4><i class="fab fa-discord"></i> Discord Bot Hosting</h4>
+      <p>Run your Discord bots 24/7 without downtime on powerful nodes.</p>
+      <button>Request Host</button>
+    </div>
   </div>
-  <div class="panel">
-    <h4>Orders</h4>
-    <p>Pending: 0 | Completed: 0</p>
-  </div>
-  <div class="panel">
-    <h4>Stats</h4>
-    <p>CPU Usage: 0% | RAM Usage: 0%</p>
-  </div>
-  <div class="panel">
-    <h4>Quick Actions</h4>
-    <button onclick="alert('Create new server functionality')">Create Server</button>
-  </div>
-</div>
+</section>
 
-<!-- Three.js Library -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/three.min.js"></script>
-<script>
-// ===== THREE.JS 3D SCENE =====
-const scene = new THREE.Scene();
-const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
-const renderer = new THREE.WebGLRenderer({canvas: document.getElementById('canvas3d'), alpha:true});
-renderer.setSize(window.innerWidth, window.innerHeight);
+<!-- About Section (Added) -->
+<section id="about" class="fadeIn">
+  <h3>About BelvoHost</h3>
+  <p>Built by developers, for developers. At BelvoHost, we combine cutting-edge infrastructure with futuristic design to deliver seamless hosting experiences. Part of the Nexus Codes ecosystem. 💻✨</p>
+</section>
 
-// Rotating Torus
-const geometry = new THREE.TorusGeometry(3, 0.5, 16, 100);
-const material = new THREE.MeshStandardMaterial({ color: 0x4f46e5, metalness:0.7, roughness:0.3 });
-const torus = new THREE.Mesh(geometry, material);
-scene.add(torus);
-
-// Lights
-const light1 = new THREE.PointLight(0xffffff, 1.2);
-light1.position.set(10,10,10);
-scene.add(light1);
-const light2 = new THREE.AmbientLight(0x404040, 1.5);
-scene.add(light2);
-
-// Camera
-camera.position.z = 10;
-
-// Animate
-function animate(){
-  requestAnimationFrame(animate);
-  torus.rotation.x += 0.01;
-  torus.rotation.y += 0.02;
-  renderer.render(scene, camera);
-}
-animate();
-
-// Resize
-window.addEventListener('resize', ()=>{
-  camera.aspect = window.innerWidth/window.innerHeight;
-  camera.updateProjectionMatrix();
-  renderer.setSize(window.innerWidth, window.innerHeight);
-});
-</script>
+<!-- Contact Section -->
+<section id="contact" class="fadeIn">
+  <h3>Contact Us</h3>
+  <p><i class="fas fa-envelope"></i> support@belvohost.com</p>
+</section>
 
 <script>
-// ====== FETCH USER DATA =====
-async function fetchUserData(){
-  try{
-    const res = await fetch('/getUserData'); // هذا endpoint في server.js
-    const data = await res.json();
-    if(data.success){
-      document.getElementById('username').innerText = data.user.username;
-      document.getElementById('coins').innerText = data.user.coins;
-      // لاحقًا يمكنك تحديث باقي الإحصائيات
-    }
-  } catch(err){
-    console.error("Error fetching user data", err);
-  }
-}
+  // Mobile Menu Toggle
+  const menuToggle = document.getElementById('menuToggle');
+  const nav = document.getElementById('mainNav');
 
-// Call fetchUserData on load
-fetchUserData();
+  menuToggle.addEventListener('click', () => {
+    nav.classList.toggle('active');
+    menuToggle.classList.toggle('active');
+  });
+
+  // Close menu when clicking a link (mobile)
+  document.querySelectorAll('#mainNav a').forEach(link => {
+    link.addEventListener('click', () => {
+      nav.classList.remove('active');
+      menuToggle.classList.remove('active');
+    });
+  });
 </script>
 
 </body>
