Update and rename index.html to login.html

--- a/public/login.html
+++ b/public/login.html
@@ -219,7 +219,7 @@ async function login(){
     if(data.success){
       message.style.color = "#4ade80";
       message.innerText = "Login Successful!";
-      setTimeout(()=> window.location.href="dashboard.html", 1000);
+      setTimeout(()=> window.location.href="home.html", 1000);
     } else {
       message.style.color = "#ff5555";
       message.innerText = "Login Failed!";
