--- a/public/home.html
+++ b/public/home.html
@@ -378,16 +378,23 @@
 <script>
   // جلب الكوينز من السيرفر (Server.js)
   async function loadUserCoins() {
-    try {
-      const res = await fetch('/api/coins');
-      if (!res.ok) throw new Error('Network response was not ok');
-      const data = await res.json();
-      document.getElementById('userCoins').textContent = data.coins.toLocaleString();
-    } catch (err) {
-      console.error('Failed to load coins:', err);
+  try {
+    const username = localStorage.getItem('belvohost_user');
+    if (!username) {
       document.getElementById('userCoins').textContent = '—';
+      return;
     }
+
+    const res = await fetch(`/api/coins?username=${encodeURIComponent(username)}`);
+    if (!res.ok) throw new Error('Network error');
+    
+    const data = await res.json();
+    document.getElementById('userCoins').textContent = data.coins.toLocaleString();
+  } catch (err) {
+    console.error('Failed to load coins:', err);
+    document.getElementById('userCoins').textContent = '—';
   }
+}
 
   // Mobile Menu Toggle
   const menuToggle = document.getElementById('menuToggle');  const nav = document.getElementById('mainNav');
