--- a/public/plans.html
+++ b/public/plans.html
@@ -30,7 +30,7 @@
       font-family: 'Segoe UI', system-ui, sans-serif;
       min-height: 100%;
       color: var(--text-light);
-      background: url('/images/file_00000000cc34720aa65b11d4686cb3fc.png') no-repeat center center fixed;
+      background: url('https://i.ibb.co/RGGqgXRv/file-00000000cc34720aa65b11d4686cb3fc.png') no-repeat center center fixed;
       background-size: cover;
       scroll-behavior: smooth;
     }
