--- a/public/login.html
+++ b/public/login.html
@@ -14,7 +14,7 @@ body, html {
   height:100%;
   overflow:hidden;
   font-family: 'Arial', sans-serif;
-  background: url('/images/wanted.png') no-repeat center center fixed;
+  background: url('https://i.ibb.co/RGGqgXRv/file-00000000cc34720aa65b11d4686cb3fc.png') no-repeat center center fixed;
   background-size: cover;
   color: white;
 }
