--- a/public/plans.html
+++ b/public/plans.html
@@ -420,7 +420,8 @@
           "256Mb Ram",
           "256Mb SSD Storage",
           "1Gb/s Network",
-          "×1 MySQL Database"
+          "×1 MySQL Database",
+          "Price: 50Dt Oreedo"
         ]      },
       {
         name: "Medium Bots Plan",
