--- a/public/home.html
+++ b/public/home.html
@@ -350,9 +350,11 @@
       <p>Reliable and fast servers for Minecraft players with DDoS protection & instant setup.</p>
       <button onclick="goplan()">Request Host</button>
     </div>
-    <div class="plan">
-      <h4><i class="fas fa-gamepad"></i> SAMP Hosting</h4>
       <p>Optimized servers for SAMP multiplayer with custom plugins & low latency.</p>
+      <button onclick="goplan()">Request Host</button>
+    <div class="plan">
+      <h4><i class="fas fa-gamepad"></i> MTA Hosting</h4>
+      <p>Optimized servers for MTA  with custom plugins & low latency.</p>
       <button onclick="goplan()">Request Host</button>
     </div>
     <div class="plan">
